Added values text.

--- a/realSite.html
+++ b/realSite.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="lib/fontawesome/css/font-awesome.min.css">
 	</head>
 	<body style="height: 2000px">
-		<header>
+		<header id="home">
 			<h1>Blue Ox Cleaning</h1>
 			<img src="img/BlueOxLogoWhite-Small.png" class="mainLogo"/>
 			<h3>
@@ -41,19 +41,44 @@
 		</div>
 		</div>
 		<section>
-			<div id="valuesOuterWrapper" class="valuesOuterWrapper">
+			<div id="values" class="valuesOuterWrapper">
 				<div id="buildingWrapper" class="buildingWrapper">
 					<img class="building" src='img/building.png' />
 				</div>
 				<div class="valuesWrapper">
 					<ul>
-						<li>Loyal</li>
-						<li>Wise</li>
-						<li>Determined</li>
-						<li>Trustworthy</li>
-						<li>Friendly</li>
+						<li>
+							<h3>Loyal</h3>
+							<span>We want to make sure each of our clients is treated like our only client. We'll work hard to keep up a personal relationship with you to make sure we're meeting your needs. </span>
+						</li>
+
+						<li>
+							<h3>Wise</h3>
+							<span>We've been doing this a long time. With over fifteen years of cleaning and maintenance experience, no job surprises us. </span>
+						</li>
+
+						<li>
+							<h3>Determined</h3>
+							<span>No job is too hard for us. We take care of the difficult work you don't want to worry about. </span>
+						</li>
+
+						<li>
+							<h3>Trustworthy</h3>
+							<span>We believe so deeply in our service and commitment that we'll give you the first cleaning free. No strings attached. </span>
+						</li>
+
+						<li>
+							<h3>Friendly</h3>
+							<span>We're easy to work with because we like what we do and we always keep a positive attitude. With regular checkins, we'll do our best to keep you happy, too.</span>
+						</li>
 					</ul>
 				</div>
+				<div class="grass">
+				</div>
+			</div>
+			<div id="services">
+			</div>
+			<div id="contact">
 			</div>
 		</section>
 
