--- a/realSite.html
+++ b/realSite.html
@@ -22,10 +22,10 @@
 		</header>
 		<nav>
 			<ul class="stitched">
-				<li><a href="#home">Home</a></li>
-				<li><a href="#values">Values</a></li>
-				<li><a href="#services">Services</a></li>
-				<li><a href="#contact">Contact</a></li>
+				<li><a href="#home" id="homeLink" class="selected">Home</a></li>
+				<li><a href="#values" id="valuesLink">Values</a></li>
+				<li><a href="#services" id="servicesLink">Services</a></li>
+				<li><a href="#contact" id="contactLink">Contact</a></li>
 			</ul>
 		</nav>
 		<div class="clouds">
