More sections added.

--- a/realSite.html
+++ b/realSite.html
@@ -28,17 +28,7 @@
 				<li><a href="#contact" id="contactLink">Contact</a></li>
 			</ul>
 		</nav>
-		<div class="clouds">
-			<div class="cloud small"></div>
-			<div class="cloud med" style="top: 565px;"></div>
-			<div class="cloud med" style="top: 525px; left: 314px;"></div>
-			<div class="cloud med" style="top: 525px; left: 650px;"></div>
-			<div class="cloud med" style="top: 525px; left: 800px;"></div>
-			<div class="cloud med" style="top: 530px; left: -149px;"></div>
-			<div class="cloud med" style="top: 525px; left: 105px;"></div>
-			<div class="cloud med" style="top: 513px; left: -106px;"></div>
-
-		</div>
+		<div class="clouds"></div>
 		</div>
 		<section>
 			<div id="values" class="valuesOuterWrapper">
@@ -76,9 +66,54 @@
 				<div class="grass">
 				</div>
 			</div>
-			<div id="services">
+			<div id="services" class="servicesOuterWrapper">
+				<div class="serviceContainer">
+					<div class="serviceListLeft">
+						<h2>The Basics</h2>
+						<ul>
+							<li>Waste removal / recycling</li>
+							<li>Dusting</li>
+							<li>Bathrom cleaning / stocking</li>
+							<li>Indoor widow cleaning</li>
+						</ul>
+					</div>
+					<div class="serviceListRight">
+						<h2>Floor Care</h2>
+						<ul>
+							<li>Floor stripping and waxing</li>
+							<li>Deep carpet cleaning</li>
+							<li>Burnishing</li>
+							<li>Vacuuming / sweeping / mopping </li>
+						</ul>
+					</div>
+				</div>
+				<div class="serviceContainer">
+					<div class="serviceListLeft">
+						<h2>Maintenance</h2>
+						<ul>
+							<li>Light bulb replacement / ballast replacement</li>
+							<li>Air filter replacement</li>
+						</ul>
+					</div>
+					<div class="serviceListRight">
+						<h2>Specialties</h2>
+						<ul>
+							<li>Need something special? Just ask!</li>
+						</ul>
+					</div>
+				</div>
 			</div>
-			<div id="contact">
+			<div id="contact" class="contactOuterWrapper">
+				<h2>Get a hold of us!</h2>
+				<div class="contactWrapper">
+					<form>
+						<input id="name" type="text" placeholder="Name" class="checkMe"/>
+			   			<input id="telephoneNumber" type="tel" placeholder="Telephone Number (Optional)" class=""/>
+			   			<input id="emailAddress" type="email" placeholder="Email Address" class="checkMe"/>
+			   			<textarea  id="message" type="text" placeholder="Your Message" class="checkMe"></textarea>
+			   			<button id ="submitContactForm">Submit</button>
+					</form>
+				</div>
 			</div>
 		</section>
 
