Stylized contact section.

--- a/realSite.html
+++ b/realSite.html
@@ -104,15 +104,19 @@
 				</div>
 			</div>
 			<div id="contact" class="contactOuterWrapper">
-				<h2>Get a hold of us!</h2>
 				<div class="contactWrapper">
-					<form>
-						<input id="name" type="text" placeholder="Name" class="checkMe"/>
-			   			<input id="telephoneNumber" type="tel" placeholder="Telephone Number (Optional)" class=""/>
-			   			<input id="emailAddress" type="email" placeholder="Email Address" class="checkMe"/>
-			   			<textarea  id="message" type="text" placeholder="Your Message" class="checkMe"></textarea>
-			   			<button id ="submitContactForm">Submit</button>
-					</form>
+					<div class="contactContainerLeft">
+						<h2>Get a hold of us!</h2>
+					</div>
+					<div class="contactContainerRight">
+						<form>
+							<input id="name" type="text" placeholder="Name" class="checkMe"/>
+				   			<input id="telephoneNumber" type="tel" placeholder="Telephone Number (Optional)" class=""/>
+				   			<input id="emailAddress" type="email" placeholder="Email Address" class="checkMe"/>
+				   			<textarea  id="message" type="text" placeholder="Your Message" class="checkMe"></textarea>
+				   			<button id ="submitContactForm">Submit</button>
+						</form>
+					</div>
 				</div>
 			</div>
 		</section>
