Contact form added.

--- a/realSite.html
+++ b/realSite.html
@@ -109,7 +109,7 @@
 						<h2>Get a hold of us!</h2>
 					</div>
 					<div class="contactContainerRight">
-						<form>
+						<form id="contactForm">
 							<input id="name" type="text" placeholder="Name" class="checkMe"/>
 				   			<input id="telephoneNumber" type="tel" placeholder="Telephone Number (Optional)" class=""/>
 				   			<input id="emailAddress" type="email" placeholder="Email Address" class="checkMe"/>
@@ -127,7 +127,7 @@
 		<div class="bubbles2" data-0="background-position:0px 0px;" data-end="background-position:-500px -500px;"></div> -->
 
 		<footer>
-
+			<span>All rights reserved &#169;2013 Blue Ox Cleaning</span>
 		</footer>
 
 		<!-- JS at bottom of body for faster page loads -->
@@ -136,6 +136,7 @@
 		<script src="lib/bootstrap/js/bootstrap.min.js"></script>
 		<script src="lib/skrollr.min.js"></script>
 		<script src="lib/jquery-scrollto.js"></script>
+		<script src="lib/placeholders.min.js"></script>
 
 		<!-- Main JS -->
 		<script src="js/blueOx.js"></script>
