--- a/realSite.html
+++ b/realSite.html
@@ -69,7 +69,7 @@
 			<div id="services" class="servicesOuterWrapper">
 				<div class="serviceContainer">
 					<div class="serviceListLeft">
-						<h2>The Basics</h2>
+						<h2><i class="icon-trash"></i>The Basics</h2>
 						<ul>
 							<li>Waste removal / recycling</li>
 							<li>Dusting</li>
@@ -78,7 +78,7 @@
 						</ul>
 					</div>
 					<div class="serviceListRight">
-						<h2>Floor Care</h2>
+						<h2>Floor Care <i class="icon-tint"></i></h2>
 						<ul>
 							<li>Floor stripping and waxing</li>
 							<li>Deep carpet cleaning</li>
@@ -89,14 +89,14 @@
 				</div>
 				<div class="serviceContainer">
 					<div class="serviceListLeft">
-						<h2>Maintenance</h2>
+						<h2><i class="icon-wrench"></i> Maintenance</h2>
 						<ul>
 							<li>Light bulb replacement / ballast replacement</li>
 							<li>Air filter replacement</li>
 						</ul>
 					</div>
 					<div class="serviceListRight">
-						<h2>Specialties</h2>
+						<h2>Specialties <i class="icon-gears"></i></h2>
 						<ul>
 							<li>Need something special? Just ask!</li>
 						</ul>
@@ -109,7 +109,13 @@
 						<h2>Get a hold of us!</h2>
 					</div>
 					<div class="contactContainerRight">
-						<form id="contactForm">
+						<div class="call">
+							<h2>Call</h2>
+							<i class="icon-phone"></i> <span>(651) 328-9066</span>
+						</div>
+						
+						<form id="contactForm" class="email">
+							<h2>Email</h2>
 							<input id="name" type="text" placeholder="Name" class="checkMe"/>
 				   			<input id="telephoneNumber" type="tel" placeholder="Telephone Number (Optional)" class=""/>
 				   			<input id="emailAddress" type="email" placeholder="Email Address" class="checkMe"/>
