More general work toward 1.0

--- a/realSite.html
+++ b/realSite.html
@@ -36,34 +36,40 @@
 					<img class="building" src='img/building.png' />
 				</div>
 				<div class="valuesWrapper">
+					<div class="paralaxProps">
+						<img src="img/branch.png" class="treeBranch drop skrollable skrollable-after" data-1300="top:100%;display:block;" data-2000="top:-40%;display:none;" style="top: 0%;display:none;" />
+						<img src="img/bird-large.png" class="bird drop skrollable skrollable-after" data-0="display:none;"; data-2700="left:-15%;top:20%;display:block;" data-3400="top:-20%;display:none;left:100%;" style="top:10%;display:none;" />
+					</div>
 					<ul>
 						<li>
-							<h3>Loyal</h3>
+							<h3>Loyal<i class="icon-umbrella"></i></h3>
 							<span>We want to make sure each of our clients is treated like our only client. We'll work hard to keep up a personal relationship with you to make sure we're meeting your needs. </span>
 						</li>
 
 						<li>
-							<h3>Wise</h3>
+							<h3>Wise<i class="icon-book"></i></h3>
 							<span>We've been doing this a long time. With over fifteen years of cleaning and maintenance experience, no job surprises us. </span>
 						</li>
 
 						<li>
-							<h3>Determined</h3>
+							<h3>Determined<i class="icon-shield"></i></h3>
 							<span>No job is too hard for us. We take care of the difficult work you don't want to worry about. </span>
 						</li>
 
 						<li>
-							<h3>Trustworthy</h3>
+							<h3>Trustworthy<i class="icon-lock"></i></h3>
 							<span>We believe so deeply in our service and commitment that we'll give you the first cleaning free. No strings attached. </span>
 						</li>
 
 						<li>
-							<h3>Friendly</h3>
+							<h3>Friendly<i class="icon-smile"></i></h3>
 							<span>We're easy to work with because we like what we do and we always keep a positive attitude. With regular checkins, we'll do our best to keep you happy, too.</span>
 						</li>
 					</ul>
 				</div>
 				<div class="grass">
+				</div>
+				<div class="flower">
 				</div>
 			</div>
 			<div id="services" class="servicesOuterWrapper">
