Background buildings added.

--- a/realSite.html
+++ b/realSite.html
@@ -1,6 +1,18 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
+		<meta charset="utf-8">
+		<title>Blue Ox Cleaning</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="author" content="Blue Ox Cleaning" />
+		<meta name="description" content="Whether your company has a small office or multiple offices , Blue Ox Cleaning has the trained professionals to exceed your expectations. Our commercial office cleaning services can be tailored to fit your company's busy work schedule on a daily, weekly, or bi-weekly basis. We have knowledgeable, trained staff, custom cleaning programs and superior equipment to handle any office building.">
+		<meta property="og:title" content="Blue Ox Cleaning -- We'll Make you shine!" />
+		<meta property="og:url" content="http://www.blueoxcleaning.com" />
+		<meta property="og:type" content="website" />
+		<meta property="og:description" content="Whether your company has a small office or multiple offices , Blue Ox Cleaning has the trained professionals to exceed your expectations. Our commercial office cleaning services can be tailored to fit your company's busy work schedule on a daily, weekly, or bi-weekly basis. We have knowledgeable, trained staff, custom cleaning programs and superior equipment to handle any office building." />
+
+		<link rel="shortcut icon" href="img/ico/favicon.ico">
+
 		<!-- Style Sheets -->
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 		<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
@@ -37,8 +49,12 @@
 				</div>
 				<div class="valuesWrapper">
 					<div class="paralaxProps">
+						<img src="img/branch2.png" class="treeBranch2 drop skrollable skrollable-after" data-1200="top:100%;display:block;" data-1900="top:-85%;display:none;" style="top: 0%;display:none;" />
 						<img src="img/branch.png" class="treeBranch drop skrollable skrollable-after" data-1300="top:100%;display:block;" data-2000="top:-40%;display:none;" style="top: 0%;display:none;" />
 						<img src="img/bird-large.png" class="bird drop skrollable skrollable-after" data-0="display:none;"; data-2700="left:-15%;top:20%;display:block;" data-3400="top:-20%;display:none;left:100%;" style="top:10%;display:none;" />
+						<!-- Background buildings -->
+						<img src="img/buildingsFront.png" class="buildingsFront drop skrollable skrollable-after" data-0="position:fixed; bottom:-550px; left: 330px;" data-3000="position:fixed; bottom:0px; left: 330px;" />
+						<img src="img/buildingsBack.png" class="buildingsBack drop skrollable skrollable-after" data-0="position:fixed; bottom:-800px; left: 330px;" data-3000="position:fixed; bottom:0px; left: 330px;"/>
 					</div>
 					<ul>
 						<li>
@@ -112,7 +128,7 @@
 			<div id="contact" class="contactOuterWrapper">
 				<div class="contactWrapper">
 					<div class="contactContainerLeft">
-						<h2>Get a hold of us!</h2>
+						<h2>Contact us!</h2>
 					</div>
 					<div class="contactContainerRight">
 						<div class="call">
