--- a/realSite.html
+++ b/realSite.html
@@ -17,6 +17,8 @@
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 		<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="lib/fontawesome/css/font-awesome.min.css">
+
+		<script src="lib/html5shiv.js"></script>
 	</head>
 	<body style="height: 2000px">
 		<header id="home">
