Adding social icons.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 					<div class="flipTitle">Trustworthy</div>
 				</div>
 			</h3>
+			<div class="socialIcons">
+				<div class="faceBook"><a href="https://www.facebook.com/BlueOxCleaning" target="_blank"><i class="icon-facebook"></i></a></div>
+				<div class="twitter"><a href="https://twitter.com/MN_BabeBlueOx_" target="_blank"><i class="icon-twitter"></i></a></div>
+			</div>
 		</header>
 		<nav>
 			<ul class="stitched">
@@ -76,7 +80,7 @@
 
 						<li>
 							<h3>Trustworthy<i class="icon-lock"></i></h3>
-							<span>We believe so deeply in our service and commitment that we'll give you the first cleaning free. No strings attached. </span>
+							<span>We believe so deeply in our service and commitment that we'll give you the first cleaning 25% off. No strings attached. </span>
 						</li>
 
 						<li>
