mobile site done.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 		<script src="lib/html5shiv.js"></script>
 	</head>
-	<body style="height: 2000px">
+	<body id="skrollr-body">
 		<header id="home">
 			<h1>Blue Ox Cleaning</h1>
 			<img src="img/BlueOxLogoWhite-Small.png" class="mainLogo"/>
@@ -95,7 +95,7 @@
 				</div>
 			</div>
 			<div id="services" class="servicesOuterWrapper">
-				<div class="serviceContainer">
+				<div class="serviceContainer top">
 					<div class="serviceListLeft">
 						<h2><i class="icon-trash"></i>The Basics</h2>
 						<ul>
@@ -115,7 +115,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="serviceContainer">
+				<div class="serviceContainer bottom">
 					<div class="serviceListLeft">
 						<h2><i class="icon-wrench"></i> Maintenance</h2>
 						<ul>
@@ -154,11 +154,6 @@
 				</div>
 			</div>
 		</section>
-
-<!-- 		<div class="bubbles" data-0="background-position:0px 0px;" data-end="background-position:-500px -2000px;">
-
-		</div>
-		<div class="bubbles2" data-0="background-position:0px 0px;" data-end="background-position:-500px -500px;"></div> -->
 
 		<footer>
 			<span>All rights reserved &#169;2013 Blue Ox Cleaning</span>
